| Bug #57529 | crash on DROP TABLE INNODB_TABLE_MONITOR | ||
|---|---|---|---|
| Submitted: | 18 Oct 2010 15:23 | Modified: | 13 Jan 2011 19:34 |
| Reporter: | Mark Callaghan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB Plugin storage engine | Severity: | S2 (Serious) |
| Version: | 5.1.47 | OS: | Any |
| Assigned to: | Jimmy Yang | CPU Architecture: | Any |
| Tags: | Drop, innodb, innodb_table_monitor | ||
[18 Oct 2010 15:23]
Mark Callaghan
[20 Oct 2010 14:42]
Chris Calender
Well, I was able to get it to crash on the DROP TABLE innodb_table_monitor this morning. (I was actually just cleaning up my instance to re-test today, tried dropping the table to start from fresh, and it crashed, first statement.) Here is the error log, so perhaps it contains some additional, useful information: 101020 10:33:32 - mysqld got exception 0xc0000005 ; This could be because you hit a bug. It is also possible that this binary or one of the libraries it was linked against is corrupt, improperly built, or misconfigured. This error can also be caused by malfunctioning hardware. We will try our best to scrape up some info that will hopefully help diagnose the problem, but since we have already crashed, something is definitely wrong and this may fail. key_buffer_size=26214400 read_buffer_size=65536 max_used_connections=42 max_threads=2000 threads_connected=1 It is possible that mysqld could use up to key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 677850 K bytes of memory Hope that's ok; if not, decrease some variables in the equation. thd: 0x8f374a0 Attempting backtrace. You can use the following information to find out where mysqld died. If you see no messages after this, something went terribly wrong... 10033601 ha_innodb_plugin.dll!dict_load_table()[dict0load.c:1057] 100295A8 ha_innodb_plugin.dll!dict_table_get_low()[dict0dict.ic:810] 1009761C ha_innodb_plugin.dll!row_drop_table_for_mysql()[row0mysql.c:3054] 1007E6EE ha_innodb_plugin.dll!ha_innodb::delete_table()[ha_innodb.cc:6993] 00481CB7 mysqld.exe!handler::ha_delete_table()[handler.cc:3373] 00483593 mysqld.exe!ha_delete_table()[handler.cc:2029] 004B88E6 mysqld.exe!mysql_rm_table_part2()[sql_table.cc:2071] 004B93FA mysqld.exe!mysql_rm_table()[sql_table.cc:1850] 0045A69D mysqld.exe!mysql_execute_command()[sql_parse.cc:3450] 0045D3BF mysqld.exe!mysql_parse()[sql_parse.cc:6055] 0045DE23 mysqld.exe!dispatch_command()[sql_parse.cc:1262] 0045E8B7 mysqld.exe!do_command()[sql_parse.cc:892] 0047F3F0 mysqld.exe!handle_one_connection()[sql_connect.cc:1136] 00681B3B mysqld.exe!pthread_start()[my_winthread.c:85] 00661673 mysqld.exe!_callthreadstart()[thread.c:293] 2E302E30 0A130031 08E4EA60 Trying to get some variables. Some pointers may be invalid and cause the dump to abort... thd->query at 0257CDD0=drop table innodb_table_monitor thd->thread_id=43 thd->killed=NOT_KILLED The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains information that should help you find out what is causing the crash.
[22 Dec 2010 21:29]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (version source revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (merge vers: 5.6.1) (pib:24)
