Fix Bug #57529 crash on DROP TABLE INNODB_TABLE_MONITOR

rb://494 approved by Sunny Bains